--- a/index.html
+++ b/index.html
@@ -123,20 +123,19 @@
             <div class="intor_text_container_1 intor_text_dis_1">
                 <div class="intor_text_name">王俊淵，76<span class="intor_symbol_1">&frasl;</span>10<span class="intor_symbol_1">&frasl;</span>15，銘傳數位媒體設計</div>
                 <div class="intor_text">
-                    先後在奧爾多媒體、大禹行銷、嘉聯科技、雷普科技、學習王科技負責網頁相關工作，目前在始祖鳥科技任職UIUX設計師，至今<span>已有9~10年經驗</span>，期許未來能在設計領域中能有向上挑戰和發揮的機會。<br />
-                    使用<span>Photoshop、Figma、illustrator</span>製作網頁、各類型介面之視覺設計；
+                    先後在奧爾多媒體、大禹行銷、嘉聯科技、雷普科技、學習王科技負責網頁相關工作，<span>至今已有9年經驗，目前在始祖鳥科技任職UIUX設計師，主要執行專案客戶有永豐網路投保、泰安產物、元大槓桿期貨。</span>
                 </div>
             </div>
             <div class="intor_text_container_1 intor_text_dis_2" style="padding-top:0px;">
                 <div class="intor_text_name">王俊淵，76<span class="intor_symbol_1">.</span>10<span class="intor_symbol_1">.</span>15<br />銘傳大學數位媒體設計</div>
                 <div class="intor_text">
-                    先後在奧爾多媒體、大禹行銷、嘉聯科技、雷普科技、學習王科技負責網頁相關工作，目前在始祖鳥科技任職UIUX設計師，至今<span>已有9~10年經驗</span>，期許未來能在設計領域中能有向上挑戰和發揮的機會。
+                    先後在奧爾多媒體、大禹行銷、嘉聯科技、雷普科技、學習王科技負責網頁相關工作，<span>至今已有9年經驗，目前在始祖鳥科技任職UIUX設計師，主要執行專案客戶有永豐網路投保、泰安產物、元大槓桿期貨。</span>
                 </div>
             </div>
             <div class="intor_text_container_2 intor_text_dis_1">
                 <div class="intor_text_name">專長視覺設計、UI<span class="intor_symbol_2">&amp;</span>UX設計、網頁建置</div>
                 <div class="intor_text" style="word-break:break-all">
-                    能依Boostrap概念為基礎並能<span>運用Html5.CSS3.Jquery建置RWD網頁並搭配SCSS</span>增加改版、維護之效率；行動裝置<span>APP能利用IOS、Google設計規範設計介面；了解使用者體驗相關知識，規劃數位產品使用流程</span>；懂使用Google Analytics、Google tag manager蒐集使用者資料。
+                    使用Figma、Photoshop、illustrator繪圖軟體，製作<span>官方網站、活動網頁、APP、系統後台...等視覺設計</span>，有能力運用Html5.CSS3.SCSS<span>建置RWD網頁</span>。懂IOS和google設計規範，靈活<span>運用介面元件和使用者體驗知識，設計各類介面和規畫流程並製作設計規範。</span>
                 </div>
             </div>
         </div>
@@ -144,8 +143,7 @@
         <div class="intor_text_container_2 intor_text_dis_2" style="float:none;">
             <div class="intor_text_name">專長視覺設計、UI<span class="intor_symbol_2">&amp;</span>UX設計、網頁建置</div>
             <div class="intor_text" style="word-break:break-all">
-                使用<span>Photoshop、illustrator、Figma</span>製作網頁、各類型介面之視覺設計；
-                能依Boostrap概念為基礎並<span>能運用Html5.CSS3.Jquery建置RWD網頁並搭配SCSS</span>增加改版、維護之效率；行動裝置<span>APP能利用IOS、Google設計規範設計介面；了解使用者體驗相關知識，規劃數位產品使用流程</span>；懂使用Google Analytics、Google tag manager蒐集使用者資料。
+                    使用Figma、Photoshop、illustrator繪圖軟體，製作<span>官方網站、活動網頁、APP、系統後台...等視覺設計</span>，有能力運用Html5.CSS3.SCSS<span>建置RWD網頁</span>。懂IOS和google設計規範，靈活<span>運用介面元件和使用者體驗知識，設計各類介面和規畫流程並製作設計規範。</span>
             </div>
         </div>
 
@@ -160,8 +158,8 @@
                     <div class="works_btn works_btn_active"><a href="#tab1">官網類型</a></div>
                     <div class="works_btn"><a href="#tab2">行銷類型</a></div>
                     <div class="works_btn"><a href="#tab3">APP&amp;後台</a></div>
-                    <div class="works_btn"><a href="#tab4">UX知識</a></div>
-                    <div class="works_btn"><a href="#tab5">PS繪圖</a></div>
+                    <div class="works_btn"><a href="#tab4">PS繪圖</a></div>
+                    <div class="works_btn"><a href="#tab5">UX知識</a></div>
                 </div>
             </div>
             <div>
@@ -213,11 +211,11 @@
                             <div class="works_item_pic"><img id="t1_4" src="image/p17s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
-                            <div class="works_item_bar"><span>泰安產物官網-視覺改版</span></div>
+                            <div class="works_item_bar"><span>泰安產物官網視覺</span></div>
                         </div>
                     </div>
 
-                    <div class="works_item_container">
+                    <div class="works_item_container" style="display:none;">
                         <a href="website/home-teacher191031/index.html" target="_blank" role="button">
                             <div class="works_item">
                                 <div class="works_item_pic"><img id="t1_5" src="image/w5s.jpg" alt="" />
@@ -276,7 +274,7 @@
                             <div class="works_item_bar"><span>Suzuki商品專頁</span></div>
                         </div>
                     </div>
-                    <div class="works_item_container">
+                    <div class="works_item_container" style="display:none;">
                         <div id="p1" class="works_item item_show_pic">
                             <div class="works_item_pic"><img id="t2_5" src="image/p1s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
@@ -327,7 +325,7 @@
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                     <div class="works_item_note"><span>推薦</span></div>
                                 </div>
-                                <div class="works_item_bar"><span>股票APP設計UIUX展示</span></div>
+                                <div class="works_item_bar"><span>股票APP UIUX展示</span></div>
                             </div>
                         </a>
                     </div>
@@ -364,32 +362,6 @@
                 </div>
 
                 <div id="tab4" class="works_item_area">
-
-                    <div class="works_item_container">
-                        <a href="website/ux/page_1.html" target="_blank">
-                            <div class="works_item">
-                                <div class="works_item_pic"><img id="" src="image/u1s.jpg" alt="" />
-                                    <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
-                                </div>
-                                <div class="works_item_bar"><span>使用者訪談流程要點</span></div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="works_item_container" style="display:none;">
-                        <a href="website/ux/page_2.html" target="_blank">
-                            <div class="works_item">
-                                <div class="works_item_pic"><img id="" src="image/u2s.jpg" alt="" />
-                                    <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
-                                </div>
-                                <div class="works_item_bar"><span>易用性測試方法</span></div>
-                            </div>
-                        </a>
-                    </div>
-
-                </div>
-
-                <div id="tab5" class="works_item_area">
-
                     <div class="works_item_container">
                         <div id="s1" class="works_item item_show_pic">
                             <div class="works_item_pic"><img id="t3_1" src="image/s1s.jpg" alt="" />
@@ -440,7 +412,28 @@
                     </div>
                 </div>
 
-
+                <div id="tab5" class="works_item_area">
+                    <div class="works_item_container">
+                        <a href="website/ux/page_1.html" target="_blank">
+                            <div class="works_item">
+                                <div class="works_item_pic"><img id="" src="image/u1s.jpg" alt="" />
+                                    <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
+                                </div>
+                                <div class="works_item_bar"><span>使用者訪談</span></div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="works_item_container">
+                        <a href="website/ux/page_2.html" target="_blank">
+                            <div class="works_item">
+                                <div class="works_item_pic"><img id="" src="image/u2s.jpg" alt="" />
+                                    <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
+                                </div>
+                                <div class="works_item_bar"><span>可用性測試</span></div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
 
             </div>
         </div>
@@ -491,8 +484,8 @@
             <img src="work_image/y1-2.png" alt="" />
             <img src="work_image/y1-3.png" alt="" />
             <img src="work_image/y1-4.png" alt="" />
-            <img src="work_image/y1-5.png" alt="" />
-            <img src="work_image/y1-6.png" alt="" />
+            <img src="work_image/y1-5.png" style="display:none;" alt="" />
+            <img src="work_image/y1-6.png" style="display:none;" alt="" />
         </div>
         <img src="image/close_icon.png" class="pup_close_icon" alt="" />
     </div>
