--- a/website/ux/page_2.html
+++ b/website/ux/page_2.html
@@ -49,7 +49,7 @@
                 <div class="page_main_title">
                     <div>可用性測試</div>
                 </div>
-                <div class="page_main_note">共39頁內容</div>
+                <div class="page_main_note">建置中</div>
             </div>
         </div>
 
@@ -92,7 +92,7 @@
     </div>
     <!-- ... p1 主題版面end ... -->
     <!-- ... p2 主題版面 ... -->
-    <div id="p2" class="main_title_page page_rule">
+    <div id="p2" class="main_title_page page_rule" style="display:none;">
         <div class="page_main_container">
             <div class="page_main_content">
                 <div class="page_main_title">
@@ -116,7 +116,7 @@
     </div>
     <!-- ... p2 主題版面end ... -->
     <!-- ... p3 主題版面 ... -->
-    <div id="p3" class="main_title_page page_rule">
+    <div id="p3" class="main_title_page page_rule" style="display:none;">
         <div class="page_main_container">
             <div class="page_main_content">
                 <div class="page_main_title">
@@ -137,7 +137,7 @@
     </div>
     <!-- ... p3 主題版面end ... -->
     <!-- ... p4 主題版面 ... -->
-    <div id="p4" class="main_title_page page_rule">
+    <div id="p4" class="main_title_page page_rule" style="display:none;">
         <div class="page_main_container">
             <div class="page_main_content">
                 <div class="page_main_title">
@@ -158,7 +158,7 @@
     </div>
     <!-- ... p4 主題版面end ... -->
     <!-- ... p5 主題版面 ... -->
-    <div id="p5" class="main_title_page page_rule">
+    <div id="p5" class="main_title_page page_rule" style="display:none;">
         <div class="page_main_container">
             <div class="page_main_content">
                 <div class="page_main_title">
@@ -179,7 +179,7 @@
     </div>
     <!-- ... p5 主題版面end ... -->
     <!-- ... p6 主題版面 ... -->
-    <div id="p6" class="main_title_page page_rule">
+    <div id="p6" class="main_title_page page_rule" style="display:none;">
         <div class="page_main_container">
             <div class="page_main_content">
                 <div class="page_main_title">
@@ -200,7 +200,7 @@
     </div>
     <!-- ... p6 主題版面end ... -->
     <!-- ... p7 主題版面 ... -->
-    <div id="p7" class="main_title_page page_rule">
+    <div id="p7" class="main_title_page page_rule" style="display:none;">
         <div class="page_main_container">
             <div class="page_main_content">
                 <div class="page_main_title">
@@ -221,7 +221,7 @@
     </div>
     <!-- ... p7 主題版面end ... -->
     <!-- ... p8 主題版面 ... -->
-    <div id="p8" class="main_title_page page_rule">
+    <div id="p8" class="main_title_page page_rule" style="display:none;">
         <div class="page_main_container">
             <div class="page_main_content">
                 <div class="page_main_title">
@@ -242,7 +242,7 @@
     </div>
     <!-- ... p8 主題版面end ... -->
     <!-- ... p9 主題版面 ... -->
-    <div id="p9" class="main_title_page page_rule">
+    <div id="p9" class="main_title_page page_rule" style="display:none;">
         <div class="page_main_container">
             <div class="page_main_content">
                 <div class="page_main_title">
@@ -263,7 +263,7 @@
     </div>
     <!-- ... p9 主題版面end ... -->
     <!-- ... p10 主題版面 ... -->
-    <div id="p10" class="main_title_page page_rule">
+    <div id="p10" class="main_title_page page_rule" style="display:none;">
         <div class="page_main_container">
             <div class="page_main_content">
                 <div class="page_main_title">
@@ -284,7 +284,7 @@
     </div>
     <!-- ... p10 主題版面end ... -->
     <!-- ... p11 主題版面 ... -->
-    <div id="p11" class="main_title_page page_rule">
+    <div id="p11" class="main_title_page page_rule" style="display:none;">
         <div class="page_main_container">
             <div class="page_main_content">
                 <div class="page_main_title">
@@ -305,7 +305,7 @@
     </div>
     <!-- ... p11 主題版面end ... -->
     <!-- ... p12 主題版面 ... -->
-    <div id="p12" class="main_title_page page_rule">
+    <div id="p12" class="main_title_page page_rule" style="display:none;">
         <div class="page_main_container">
             <div class="page_main_content">
                 <div class="page_main_title">
@@ -327,7 +327,7 @@
     <!-- ... p12 主題版面end ... -->
 
     <!-- ... p13 主題版面 ... -->
-    <div id="p13" class="main_title_page page_rule">
+    <div id="p13" class="main_title_page page_rule" style="display:none;">
         <div class="page_main_container">
             <div class="page_main_content">
                 <div class="page_main_title">
@@ -346,7 +346,7 @@
     </div>
     <!-- ... p13 主題版面end ... -->
     <!-- ... p14 主題版面 ... -->
-    <div id="p14" class="main_title_page page_rule">
+    <div id="p14" class="main_title_page page_rule" style="display:none;">
         <div class="page_main_container">
             <div class="page_main_content">
                 <div class="page_main_title" style="margin-bottom:20px;">
@@ -376,7 +376,7 @@
     </div>
     <!-- ... p14 主題版面end ... -->
     <!-- ... p15 主題版面 ... -->
-    <div id="p15" class="main_title_page page_rule">
+    <div id="p15" class="main_title_page page_rule" style="display:none;">
         <div class="page_main_container">
             <div class="page_main_content">
                 <div class="page_main_title" style="margin-bottom:20px;">
@@ -398,7 +398,7 @@
     </div>
     <!-- ... p15 主題版面end ... -->
     <!-- ... p16 主題版面 ... -->
-    <div id="p15" class="main_title_page page_rule">
+    <div id="p15" class="main_title_page page_rule" style="display:none;">
         <div class="page_main_container">
             <div class="page_main_content">
                 <div class="page_main_title" style="margin-bottom:20px;">
@@ -426,7 +426,7 @@
     </div>
     <!-- ... p16 主題版面end ... -->
     <!-- ... p17 主題版面 ... -->
-    <div id="p17" class="main_title_page page_rule">
+    <div id="p17" class="main_title_page page_rule" style="display:none;">
         <div class="page_main_container">
             <div class="page_main_content">
                 <div class="page_main_title" style="margin-bottom:20px;">
@@ -453,7 +453,7 @@
     </div>
     <!-- ... p17 主題版面end ... -->
     <!-- ... p18 主題版面 ... -->
-    <div id="p18" class="main_title_page page_rule">
+    <div id="p18" class="main_title_page page_rule" style="display:none;">
         <div class="page_main_container">
             <div class="page_main_content">
                 <div class="page_main_title" style="margin-bottom:20px;">
@@ -482,7 +482,7 @@
     </div>
     <!-- ... p18 主題版面end ... -->
     <!-- ... p19 主題版面 ... -->
-    <div id="p19" class="main_title_page page_rule">
+    <div id="p19" class="main_title_page page_rule" style="display:none;">
         <div class="page_main_container">
             <div class="page_main_content">
                 <div class="page_main_title" style="margin-bottom:20px;">
@@ -509,7 +509,7 @@
     </div>
     <!-- ... p19 主題版面end ... -->
     <!-- ... p20 主題版面 ... -->
-    <div id="p20" class="main_title_page page_rule">
+    <div id="p20" class="main_title_page page_rule" style="display:none;">
         <div class="page_main_container">
             <div class="page_main_content">
                 <div class="page_main_title" style="margin-bottom:20px;">
