--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="intor_text_container_2 intor_text_dis_2" style="float:none;">
             <div class="intor_text_name">專長視覺設計、UI<span class="intor_symbol_2">&amp;</span>UX設計、網頁建置</div>
             <div class="intor_text" style="word-break:break-all">
-                    使用Figma、Photoshop、illustrator繪圖軟體，製作<span>官方網站、活動網頁、APP、系統後台...等視覺設計</span>，有能力運用Html5.CSS3.SCSS<span>建置RWD網頁</span>。懂IOS和google設計規範，靈活<span>運用介面元件和使用者體驗知識，設計各類介面和規畫流程並製作設計規範。</span>
+                使用Figma、Photoshop、illustrator繪圖軟體，製作<span>官方網站、活動網頁、APP、系統後台...等視覺設計</span>，有能力運用Html5.CSS3.SCSS<span>建置RWD網頁</span>。懂IOS和google設計規範，靈活<span>運用介面元件和使用者體驗知識，設計各類介面和規畫流程並製作設計規範。</span>
             </div>
         </div>
 
@@ -379,11 +379,35 @@
                         </div>
                     </div>
                     <div class="works_item_container">
+                        <div id="s14" class="works_item item_show_pic">
+                            <div class="works_item_pic"><img id="t3_8" src="image/s14s.jpg" alt="" />
+                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
+                            </div>
+                            <div class="works_item_bar"><span>影像合成</span></div>
+                        </div>
+                    </div>
+                    <div class="works_item_container">
                         <div id="s3" class="works_item item_show_pic">
                             <div class="works_item_pic"><img id="t3_3" src="image/s3s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>小鋼琴-物件製作</span></div>
+                        </div>
+                    </div>
+                    <div class="works_item_container">
+                        <div id="s7" class="works_item item_show_pic">
+                            <div class="works_item_pic"><img id="t3_6" src="image/s7s.jpg" alt="" />
+                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
+                            </div>
+                            <div class="works_item_bar"><span>物件製作</span></div>
+                        </div>
+                    </div>
+                    <div class="works_item_container">
+                        <div id="s8" class="works_item item_show_pic">
+                            <div class="works_item_pic"><img id="t3_7" src="image/s8s.jpg" alt="" />
+                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
+                            </div>
+                            <div class="works_item_bar"><span>物件製作</span></div>
                         </div>
                     </div>
                     <div class="works_item_container">
@@ -400,14 +424,6 @@
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>貓頭鷹-角色設計</span></div>
-                        </div>
-                    </div>
-                    <div class="works_item_container" style="display:none;">
-                        <div id="s12" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img id="t3_6" src="image/s12s.jpg" alt="" />
-                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
-                            </div>
-                            <div class="works_item_bar"><span>插畫製作</span></div>
                         </div>
                     </div>
                 </div>
@@ -429,7 +445,10 @@
                                 <div class="works_item_pic"><img id="" src="image/u2s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                 </div>
-                                <div class="works_item_bar"><span>可用性測試</span></div>
+                                <div class="works_item_bar">
+                                    <span>可用性測試</span><br />
+                                    <span style="font-size:14px;color:#ffd452;">建置中，尚無內容</span>
+                                </div>
                             </div>
                         </a>
                     </div>
