--- a/index.html
+++ b/index.html
@@ -379,8 +379,8 @@
                         </div>
                     </div>
                     <div class="works_item_container">
-                        <div id="s14" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img id="t3_8" src="image/s14s.jpg" alt="" />
+                        <div id="s15" class="works_item item_show_pic">
+                            <div class="works_item_pic"><img id="t3_3" src="image/s15s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>影像合成</span></div>
@@ -388,31 +388,24 @@
                     </div>
                     <div class="works_item_container">
                         <div id="s3" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img id="t3_3" src="image/s3s.jpg" alt="" />
+                            <div class="works_item_pic"><img id="t3_5" src="image/s3s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>小鋼琴-物件製作</span></div>
                         </div>
                     </div>
-                    <div class="works_item_container">
-                        <div id="s7" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img id="t3_6" src="image/s7s.jpg" alt="" />
-                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
-                            </div>
-                            <div class="works_item_bar"><span>物件製作</span></div>
-                        </div>
-                    </div>
+
                     <div class="works_item_container">
                         <div id="s8" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img id="t3_7" src="image/s8s.jpg" alt="" />
+                            <div class="works_item_pic"><img id="t3_6" src="image/s8s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
-                            <div class="works_item_bar"><span>物件製作</span></div>
+                            <div class="works_item_bar"><span>鏡頭-物件製作</span></div>
                         </div>
                     </div>
                     <div class="works_item_container">
                         <div id="s11" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img id="t3_4" src="image/s11s.jpg" alt="" />
+                            <div class="works_item_pic"><img id="t3_7" src="image/s11s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>產品修圖</span></div>
@@ -420,7 +413,7 @@
                     </div>
                     <div class="works_item_container">
                         <div id="s10" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img id="t3_5" src="image/s10s.jpg" alt="" />
+                            <div class="works_item_pic"><img id="t3_8" src="image/s10s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>貓頭鷹-角色設計</span></div>
