--- a/index.html
+++ b/index.html
@@ -336,24 +336,13 @@
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                     <div class="works_item_note"><span>推薦</span></div>
                                 </div>
-                                <div class="works_item_bar"><span>社群APP設計 android</span></div>
+                                <div class="works_item_bar"><span>社群APP設計</span></div>
                             </div>
                         </a>
                     </div>
-                    <div class="works_item_container">
-                        <a href="website/sunairline/page.html" target="_blank">
-                            <div class="works_item">
-                                <div class="works_item_pic"><img id="t4_5" src="image/a3s.jpg" alt="" />
-                                    <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
-                                </div>
-                                <div class="works_item_bar"><span>機票訂購APP設計 ios</span></div>
-                            </div>
-                        </a>
-                    </div>
-
                     <div class="works_item_container">
                         <div id="y1" class="works_item item_show_pic_3">
-                            <div class="works_item_pic"><img id="t4_6" src="image/y1s.jpg" alt="" />
+                            <div class="works_item_pic"><img id="t4_5" src="image/y1s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>後台系統提案</span></div>
