--- a/website/ux/page_2.html
+++ b/website/ux/page_2.html
@@ -49,7 +49,7 @@
                 <div class="page_main_title">
                     <div>可用性測試</div>
                 </div>
-                <div class="page_main_note">建置中</div>
+                <div class="page_main_note">共32頁</div>
             </div>
         </div>
 
