--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <div class="works_btn_container">
                     <div class="works_btn works_btn_active"><a href="#tab1">官網類型</a></div>
                     <div class="works_btn"><a href="#tab2">行銷類型</a></div>
-                    <div class="works_btn"><a href="#tab3">APP&amp;後台</a></div>
+                    <div class="works_btn"><a href="#tab3">APP設計</a></div>
                     <div class="works_btn"><a href="#tab4">PS繪圖</a></div>
                     <div class="works_btn"><a href="#tab5">UX知識</a></div>
                 </div>
@@ -188,7 +188,8 @@
                                     <div class="works_item_note"><span>推薦</span></div>
                                 </div>
                                 <div class="works_item_bar">
-                                    <span>元大期貨官網提案(得標)</span>
+                                    <span>元大期貨官網提案</span>
+                                    <span style="font-size:14px;color:#ffd452;">(得標)</span>
                                 </div>
                             </div>
                         </a>
@@ -215,16 +216,6 @@
                         </div>
                     </div>
 
-                    <div class="works_item_container" style="display:none;">
-                        <a href="website/home-teacher191031/index.html" target="_blank" role="button">
-                            <div class="works_item">
-                                <div class="works_item_pic"><img id="t1_5" src="image/w5s.jpg" alt="" />
-                                    <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
-                                </div>
-                                <div class="works_item_bar"><span>家教派遣平台-風格嘗試</span></div>
-                            </div>
-                        </a>
-                    </div>
                 </div>
 
                 <div id="tab2" class="works_item_area">
@@ -259,36 +250,11 @@
                         </a>
                     </div>
                     <div class="works_item_container">
-                        <div id="p6" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img id="t2_3" src="image/p6s.jpg" alt="" />
-                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
-                            </div>
-                            <div class="works_item_bar"><span>網路活動提案</span></div>
-                        </div>
-                    </div>
-                    <div class="works_item_container">
                         <div id="p12" class="works_item item_show_pic" role="button">
-                            <div class="works_item_pic"><img id="t2_4" src="image/p12s.jpg" alt="" />
+                            <div class="works_item_pic"><img id="t2_3" src="image/p12s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>Suzuki商品專頁</span></div>
-                        </div>
-                    </div>
-                    <div class="works_item_container" style="display:none;">
-                        <div id="p1" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img id="t2_5" src="image/p1s.jpg" alt="" />
-                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
-                            </div>
-                            <div class="works_item_bar"><span>3折DM</span></div>
-                        </div>
-                    </div>
-
-                    <div class="works_item_container" style="display:none;">
-                        <div id="p3" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img id="t2_4" src="image/p3s.jpg" alt="" />
-                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
-                            </div>
-                            <div class="works_item_bar"><span>產品推廣網頁</span></div>
                         </div>
                     </div>
 
@@ -311,17 +277,9 @@
                         </a>
                     </div>
                     <div class="works_item_container">
-                        <div id="" class="works_item item_show_pic_4">
-                            <div class="works_item_pic"><img id="t4_2" src="image/a5s.jpg" alt="" />
-                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
-                            </div>
-                            <div class="works_item_bar"><span>APP物件動態模擬</span></div>
-                        </div>
-                    </div>
-                    <div class="works_item_container">
-                        <a href="website/money_mine_page/page.html" target="_blank">
+                        <a href="website/money_mine_page/page_ux.html" target="_blank">
                             <div class="works_item">
-                                <div class="works_item_pic"><img id="t4_3" src="image/a1-2s.png" alt="" />
+                                <div class="works_item_pic"><img id="t4_2" src="image/a1-2s.png" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                     <div class="works_item_note"><span>推薦</span></div>
                                 </div>
@@ -332,7 +290,7 @@
                     <div class="works_item_container">
                         <a href="website/funtogo2021/page.html" target="_blank">
                             <div class="works_item">
-                                <div class="works_item_pic"><img id="t4_4" src="image/a2s.jpg" alt="" />
+                                <div class="works_item_pic"><img id="t4_3" src="image/a2s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                     <div class="works_item_note"><span>推薦</span></div>
                                 </div>
@@ -341,11 +299,11 @@
                         </a>
                     </div>
                     <div class="works_item_container">
-                        <div id="y1" class="works_item item_show_pic_3">
-                            <div class="works_item_pic"><img id="t4_5" src="image/y1s.jpg" alt="" />
+                        <div id="" class="works_item item_show_pic_4">
+                            <div class="works_item_pic"><img id="t4_4" src="image/a5s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
-                            <div class="works_item_bar"><span>後台系統提案</span></div>
+                            <div class="works_item_bar"><span>APP物件動態模擬</span></div>
                         </div>
                     </div>
                 </div>
