--- a/index.html
+++ b/index.html
@@ -190,7 +190,8 @@
                                 </div>
                                 <div class="works_item_bar">
                                     <span>元大期貨官網提案</span>
-                                    <span style="font-size:14px;color:#ffd452;">(得標)</span>
+                                    <span style="font-size:14px;color:#ffd452;">(得標)</span><br />
+                                    <span style="font-size:14px;">視覺設計和jquery動態應用</span>
                                 </div>
                             </div>
                         </a>
@@ -213,7 +214,7 @@
                             <div class="works_item_pic"><img id="t1_4" src="image/p17s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
-                            <div class="works_item_bar"><span>泰安產物官網視覺</span></div>
+                            <div class="works_item_bar"><span>泰安產物投保流程</span></div>
                         </div>
                     </div>
 
@@ -272,7 +273,7 @@
                                 <div class="works_item_bar">
                                     <span>銀行APP redesign</span>
                                     <span style="font-size:14px;color:#ffd452;">(外連figma)</span><br />
-                                    <span style="font-size:14px;">Persona、User story、Functional Map、Flow Chart...</span>
+                                    <span style="font-size:14px;">訪談整理、歸納問題點、思考解決、製作架構原型</span>
                                 </div>
                             </div>
                         </a>
@@ -284,7 +285,7 @@
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                     <div class="works_item_note"><span>推薦</span></div>
                                 </div>
-                                <div class="works_item_bar"><span>股票APP UIUX展示</span></div>
+                                <div class="works_item_bar"><span>股票APP</span><br/><span style="font-size:14px;">介面UX思維</span></div>
                             </div>
                         </a>
                     </div>
@@ -295,7 +296,7 @@
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                     <div class="works_item_note"><span>推薦</span></div>
                                 </div>
-                                <div class="works_item_bar"><span>社群APP設計</span></div>
+                                <div class="works_item_bar"><span>社群APP設計</span><br/><span style="font-size:14px;">產品設計思維</span></div>
                             </div>
                         </a>
                     </div>
@@ -435,11 +436,11 @@
     <div class="pup_container_2" style="display:none;">
         <div class="pup_bg"></div>
         <div class="pup_img_container">
-            <img src="work_image/p17-1.png" alt="" />
-            <img src="work_image/p17-2.png" alt="" />
+            <img src="work_image/p17-1.png" style="display:none;" alt="" />
+            <img src="work_image/p17-2.png" style="display:none;" alt="" />
             <img src="work_image/p17-3.png" style="display:none;" alt="" />
-            <img src="work_image/p17-4.png" alt="" />
-            <img src="work_image/p17-5.png" style="display:none;" alt="" />
+            <img src="work_image/p17-4.png" style="display:none;" alt="" />
+            <img src="work_image/p17-5.png" alt="" />
             <img src="work_image/p17-6.png" alt="" />
             <img src="work_image/p17-7.png" alt="" />
             <img src="work_image/p17-8.png" alt="" />
